# IskurEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.ps1  internal_build.ps1  setup.bat  vcpkg.json
cmake/: ProjectSetup.cmake  Streamline.cmake  Targets.cmake  ThirdParty.cmake
code/: .clang-format  .natvis  Core.cpp  Core.h  main.cpp  pch.cpp  pch.h
code/common/: Array.h  Asserts.cpp  Asserts.h  CommandLineArguments.cpp  CommandLineArguments.h  IskurPackFormat.h  Log.h  MathUtils.h  Pointers.h  Singleton.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  ToUtf8.cpp  ToUtf8.h  Types.h  UtfConversion.cpp  UtfConversion.h  Vector.h  WString.cpp  WString.h
code/common/math/: MathUtils.h  float2.h  float3.h  float3x3.h  float4.h  float4x4.h  uint2.h
code/renderer/: AlphaMode.h  AutoExposure.cpp  AutoExposure.h  BindlessHeaps.cpp  BindlessHeaps.h  Buffer.h  Camera.cpp  Camera.h  CompileShader.cpp  CompileShader.h  Constants.h  Culling.cpp  Culling.h  DLSS.cpp  DLSS.h  Environments.cpp  Environments.h  GBuffer.h  GpuResource.h  GpuTimings.cpp  GpuTimings.h  ImGui.cpp  ImGui.h  LoadShader.cpp  LoadShader.h  Material.h  Mesh.cpp  Mesh.h  Node.h  PipelineHelpers.h  PipelineState.h  Primitive.cpp  Primitive.h  Raytracing.cpp  Raytracing.h  RenderDevice.cpp  RenderDevice.h  RenderSceneTypes.h  RenderTarget.h  Renderer.cpp  (+27 more)
code/tools/IskurScenePacker/: CMakeLists.txt  CMakePresets.json  main.cpp
code/unittests/: array_unittest.cpp  float2_unittest.cpp  float3_unittest.cpp  float3x3_unittest.cpp  float4_unittest.cpp  float4x4_unittest.cpp  string_unittest.cpp  uint2_unittest.cpp  vector_unittest.cpp  wstring_unittest.cpp
code/window/: Window.cpp  Window.h
data/: CPUGPU.h  camera_presets.txt  environment_presets.txt
data/scenes/: ABeautifulGame.iskurpack  AlphaBlendModeTest.iskurpack  Bistro.iskurpack  BistroExterior.glb  BistroInterior.glb  BoomBoxWithAxes.glb  Buggy.glb  CesiumMilkTruck.glb  CompareAmbientOcclusion.iskurpack  DamagedHelmet.iskurpack  EmissiveStrengthTest.glb  GearboxAssy.glb  MetalRoughSpheres.iskurpack  MetalRoughSpheresNoTextures.iskurpack  MultiUVTest.glb  NegativeScaleTest.glb  NormalTangentMirrorTest.iskurpack  NormalTangentTest.iskurpack  SSAO.iskurpack  San-Miguel.glb  San-Miguel.iskurpack  Sponza.iskurpack  chess.glb  sponza.glb
data/scenes/ABeautifulGame/: ABeautifulGame.glb  ABeautifulGame.iskurpack
data/scenes/ABeautifulGame/textures/: 0.dds  1.dds  10.dds  11.dds  12.dds  13.dds  14.dds  15.dds  17.dds  18.dds  19.dds  2.dds  20.dds  21.dds  22.dds  23.dds  24.dds  25.dds  26.dds  27.dds  28.dds  29.dds  3.dds  30.dds  31.dds  32.dds  4.dds  5.dds  6.dds  7.dds  8.dds  9.dds
data/scenes/AlphaBlendModeTest/: AlphaBlendModeTest.glb  AlphaBlendModeTest.iskurpack
data/scenes/AlphaBlendModeTest/textures/: 1.dds  2.dds  3.dds  4.dds  5.dds
data/scenes/Bistro/: Bistro.glb  Bistro.iskurpack
data/scenes/Bistro/textures/: 0.dds  1.dds  10.dds  100.dds  101.dds  104.dds  105.dds  107.dds  108.dds  11.dds  112.dds  113.dds  114.dds  115.dds  117.dds  118.dds  119.dds  12.dds  120.dds  121.dds  123.dds  124.dds  125.dds  127.dds  13.dds  130.dds  131.dds  133.dds  134.dds  135.dds  137.dds  138.dds  139.dds  14.dds  144.dds  148.dds  149.dds  15.dds  152.dds  153.dds  (+227 more)
data/scenes/DamagedHelmet/: DamagedHelmet.glb  DamagedHelmet.iskurpack
data/scenes/DamagedHelmet/textures/: 0.dds  1.dds  2.dds  3.dds
data/scenes/MetalRoughSpheres/: MetalRoughSpheres.glb  MetalRoughSpheres.iskurpack
data/scenes/MetalRoughSpheres/textures/: 0.dds  1.dds
data/scenes/MetalRoughSpheresNoTextures/: MetalRoughSpheresNoTextures.glb  MetalRoughSpheresNoTextures.iskurpack
data/scenes/NormalTangentMirrorTest/: NormalTangentMirrorTest.glb  NormalTangentMirrorTest.iskurpack
data/scenes/NormalTangentMirrorTest/textures/: 0.dds  1.dds  2.dds
data/scenes/NormalTangentTest/: NormalTangentTest.glb  NormalTangentTest.iskurpack
data/scenes/NormalTangentTest/textures/: 1.dds  2.dds
data/scenes/SSAO/: SSAO.glb  SSAO.iskurpack
data/scenes/San-Miguel/: San-Miguel.glb  San-Miguel.iskurpack
data/scenes/San-Miguel/textures/: 0.dds  1.dds  10.dds  100.dds  101.dds  102.dds  103.dds  104.dds  105.dds  106.dds  107.dds  108.dds  109.dds  11.dds  110.dds  111.dds  112.dds  113.dds  114.dds  115.dds  116.dds  117.dds  118.dds  119.dds  12.dds  120.dds  121.dds  122.dds  (+240 more)
data/scenes/Sponza/: Sponza.glb  Sponza.iskurpack
data/scenes/Test/: Test.glb  Test.iskurpack
data/shaders/: CPUGPU.h  Common.hlsli  RT_Shadows_blur_common.hlsli  RT_Shadows_common.hlsli  asBasic.hlsl  asCommon.hlsli  csAdaptExposure.hlsl  csBlurH.hlsl  csBlurV.hlsl  csClearUint.hlsl  csExposure.hlsl  csHistogram.hlsl  csSSAO.hlsl  msBasic.hlsl  msCommon.hlsli  psAlphaTest.hlsl  psBasic.hlsl  psGBuffer.hlsl  psLighting.hlsl  psTonemap.hlsl  rtShadows.hlsl  rtShadowsRootSig.hlsl
data/shaders/amplification/: asBasic.hlsl
data/shaders/compute/: csAdaptExposure.hlsl  csClearUint.hlsl  csExposure.hlsl  csHistogram.hlsl
data/shaders/mesh/: msBasic.hlsl
data/shaders/pixel/: psAlphaTest.hlsl  psGBuffer.hlsl  psLighting.hlsl  psTonemap.hlsl
data/shaders/shared/: fullscreen.vs.hlsl
data/shaders/utils/: EncodeDecodeNormal.hlsli  ReconstructWorldPos.hlsli
data/shaders/vertex/: vsFullscreen.hlsl
data/textures/: BRDF_LUT.dds
data/textures/autumn_field_puresky_4k/: diffuseIBL.dds  envMap.dds  specularIBL.dds
data/textures/belfast_sunset_puresky_4k/: diffuseIBL.dds  envMap.dds  specularIBL.dds
data/textures/kloofendal_48d_partly_cloudy_puresky/: diffuseIBL.dds  envMap.dds  specularIBL.dds
data/textures/overcast_soil_puresky_4k/: diffuseIBL.dds  envMap.dds  specularIBL.dds
scripts/: build_debug.bat  build_release.bat  clean.bat  compress_scenes.ps1  extract_scenes.bat  extract_scenes.ps1  generate_solution.bat  internal_build.ps1  setup.bat  setup_proprietary_deps.bat
scripts/source/: clean.ps1  common.ps1  extract_scenes.ps1  internal_build.ps1  internal_generate_solution.ps1  invoke_script.bat  setup.ps1  setup_proprietary_deps.ps1
(+128 files in other folders)
